# discord-balance-tracker

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: command_handlers.rs  commands.rs  logging.rs  main.rs  model.rs  persistence.rs  utils.rs
src/command_handlers/: utils.rs
src/commands/: balance.rs  bill.rs  owe.rs
src/model/: accounts.rs  commands.rs  utils.rs
src/model/commands/: balance.rs  bill.rs  owe.rs
