[package]
name = "discord-balance-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
typemap_rev = "0.1.5"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
dotenv = "0.15.0"
serde = "1.0.130"
serde_json = "1.0.69"
